update link to git profile

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <ul class="social">
                     <li><a href="https://www.linkedin.com/in/thifhelimbilu-masindi-75a66599/"><i class="ion-social-linkedin"></i></a></li>
                     <li><a href="https://twitter.com/AustinGG247"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="https://github.com/GreyGhost247"><i class="ion-social-github"></i></a></li>
+                    <li><a href="https://github.com/MasindiT"><i class="ion-social-github"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
