fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up">
 
-                <h3> Mobile Numberr</h3>
+                <h3> Mobile Number</h3>
                 <p>+2781 332 1557</p>
                 <h3>Email</h3>
                 <p>thifhe72@gmail.com </p>
