--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
