--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>
     <!-- ./education -->
-    
+
  <!-- Projects  -->
     <div class="section" id="projects">
         <div class="container">
@@ -158,7 +158,7 @@
                 <h3>Email</h3>
                 <p>thifhe72@gmail.com </p>
 
-                <h3>Social Network</h3>
+                <h3>Find Me Online</h3>
 
                 <ul class="social">
                     <li><a href="https://www.linkedin.com/in/thifhelimbilu-masindi-75a66599/"><i class="ion-social-linkedin"></i></a></li>
