--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">Farmbrella</p>
                             <h4>Full webStack</h4>
-                            <a href="https://github.com/MasindiT/Farmbrella#farmbrella">View Source Code</a>
+                            <a href="https://github.com/MasindiT/Farmbrella#farmbrella"><i class="ion-link"></i>View Source Code</a>
                             <p>
 							<strong>
 							This system is an e-commerce website that allows users to buy different types of veggies and fruits.
