--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
                 <h3>Find Me Online</h3>
 
                 <ul class="social">
-                    <li><a href="https://www.linkedin.com/in/thifhelimbilu-masindi-75a66599/"><i class="ion-social-linkedin"></i></a></li>
-                    <li><a href="https://twitter.com/AustinGG247"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="https://github.com/MasindiT"><i class="ion-social-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/thifhelimbilu-masindi-75a66599/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="https://twitter.com/AustinGG247"><i class="ion-social-twitter" target="_blank"></i></a></li>
+                    <li><a href="https://github.com/MasindiT" target="_blank"><i class="ion-social-github"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-8" data-aos="fade-up">
-                <form class="contact-bg" id="contact-form" name="contact" method="post" novalidate="novalidate">
+                <form class="contact-bg" id="contact-form" name="contact" method="post" novalidate="novalidate" action="process.php">
                     <input type="text" name="name" class="form-control" placeholder="Your Name" />
                     <input type="email" name="email" class="form-control" placeholder="Your E-mail" />
                     <input type="text" name="phone" class="form-control" placeholder="Phone Number" />
