--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <h4>01</h4>
                 <h2 class="size-50">Know <br /> About me</h2>
                 <div class="h-50"></div>
-                <p style="font-weight: bold;">Hi! i'm Masindi Thifhelimbilu</p>
+                <p><strong>Hi!, i'm Masindi Thifhelimbilu</strong><br> FullStack developer based in Johannesburg(RSA), I have developed an intense passion
+                in developing end to end systems and trying out new technologies, because technologies are evolving with time and so should we....</p>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -91,7 +92,7 @@
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">2010 - 2014</p>
                             <h4>Bababa Secondary School</h4>
-							<h4>NSC [ Average = <strong>80.14</strong> ]</h4>
+							<h4>NSC [ Average = <strong>80.14%</strong> ]</h4>
                            
                         </div>
                     </li>
