--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
                 <h4>01</h4>
                 <h2 class="size-50">Know <br /> About me</h2>
                 <div class="h-50"></div>
-                <p><strong>Hi!, i'm Masindi Thifhelimbilu</strong><br> FullStack developer based in Johannesburg(RSA), I have developed an intense passion
-                in developing end to end systems and trying out new technologies, because technologies are evolving with time and so should we....</p>
+                <p><strong>Hi!, I'm Masindi Thifhelimbilu(Thifhe for short), haha I know it takes some time to get it right, if you don't mind I can teach you how
+			to say it correctly, I am a very passionate software engineer, I love what I do, and I don't just make sure I get things right, but
+			I do them right, After varsity I joined one of super devhouse and I am currently contracted to assupol developing DebiCheck system
+			since NAEDO is phasing out, so for to keep business going they needed to have this system.
+			I have gained extensive experience in working with different tech stacks, if you wanna stay up to date with
+			what I know and can do for you check out my contact details below, cheers.</p>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -154,7 +158,7 @@
                             <h4><a href="https://github.com/MasindiT/smartShop" target="_blank"><i class="ion-link" style="font-size: 1.3em;"></i>&nbspView Source Code</a></h4>
                             <p>
 							<strong>
-							Project In Progress..
+							Project In Progress.. uhh I won;t be uploading anymore, but I have quite interestig projects sitting on my git repo
 							</strong>
                             </p>
                             <h4><a href="#"><i class="ion-eye" style="font-size: 1.3em;"></i>&nbspView Video</a></h4>
