--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Masindi Thifhelimbilu</h4>
-                    <h1>Software Developer</h1> </div>
+                    <h1>Software Engineer</h1> </div>
             </div>
         </div>
     </div>
@@ -67,9 +67,9 @@
                 <div class="h-50"></div>
                 <p><strong>Hi!, I'm Masindi Thifhelimbilu(Thifhe for short), haha I know it takes some time to get it right, if you don't mind I can teach you how
 			to say it correctly, I am a very passionate software engineer, I love what I do, and I don't just make sure I get things right, but
-			I do them right, After varsity I joined one of super devhouse and I am currently contracted to assupol developing DebiCheck system
-			since NAEDO is phasing out, so for to keep business going they needed to have this system.
-			I have gained extensive experience in working with different tech stacks, if you wanna stay up to date with
+			I do them right, After varsity I joined one of super devhouse and I am currently contracted to assupol developing DebiCheck system for them
+			since NAEDO is phasing out, so to keep business going they needed to have this system.
+			I have gained extensive experience in working with different tech stacks, and  if you wanna stay up to date with
 			what I know and can do for you check out my contact details below, cheers.</p>
                 <div class="h-50"></div>
             </div>
